[project]
name = "deye-microinverter-power-limit"
version = "1.0.0"
description = "Set power output limit on Deye microinverters via Solarman V5 / Modbus"
license = "MIT"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
